--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,18 @@
     flex-flow: column;
     /* Ensure children elements are arranged in a column */
 }
+
+.switch-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.switch-container label {
+    display: flex;
+    align-items: center;
+}
+
+.switch-container input {
+    margin: 0 10px;
+}
